<resources>
    <string name="app_name">Action Everywhere</string>
    <string name="app_description_short">Action Everywhere is a Getting Things Done (GTD®) action list manager
    for Thinking Rock.</string>
    <string name="app_description">Action Everywhere is a Getting Things Done (GTD®) action list manager
    for Thinking Rock (www.trgtd.com.au). It synchronizes your Thinking Rock data (.trx and ReviewActions.xml files) 
    using Dropbox to your phone. The app starts directly with your action lists. You can also create
    customized lists.
    It has been designed to work with Thinking Rock 3.4.2; it might work with earlier versions.</string>
    <string name="updates">
	Updates in this version:\n
	- Setup automated test framework to improve code quality\n
	- Included Google Analytics for usage analysis\n
	- Included a privacy policy in Help and on actioneverywhere.com\n
	- \n\n
	</string>
    <string name="textViewPhoneTitle">Action list</string>
    <string name="action_list_no_items">No actions.\nCheck filter settings (press Menu button).</string>
    <string name="update_last_update">Update:</string>
    <string name="update_last_checked">Last check:</string>
    <string name="update_minutes_ago">minutes ago</string>
    <string name="update_hours_ago">hours ago</string>
    <string-array name="action_list_filters">
    	<item>Context</item>
    	<item>Topic</item>
    	<item>Status</item>
    	<item>Date is equal to or after</item>
    	<item>Date is equal to or before</item>
    </string-array>
    <string-array name="action_status">
        <item>Include all</item>
        <item>ASAP</item>
        <item>Inactive</item>
        <item>Scheduled</item>
        <item>Delegated</item>
    </string-array>
    <string-array name="action_status_id">
        <item>actionStateAll</item>
        <item>actionStateASAP</item>
        <item>actionStateInactive</item>
        <item>actionStateScheduled</item>
        <item>actionStateDelegated</item>
    </string-array>
    <string-array name="action_after_description">
        <item>Include all</item>
        <item>Tomorrow</item>
        <item>Today</item>
        <item>Yesterday</item>
        <item>One week ago</item>
        <item>Two weeks ago</item>
        <item>Three weeks ago</item>
        <item>One month ago</item>
    </string-array>
    <string-array name="action_after_days">
        <item>-999</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-7</item>
        <item>-14</item>
        <item>-21</item>
        <item>-30</item>
    </string-array>
    <string-array name="action_before_description">
        <item>Include all</item>
        <item>Yesterday</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>One week</item>
        <item>Two weeks</item>
        <item>Three weeks</item>
        <item>One month</item>
    </string-array>
    <string-array name="action_before_days">
        <item>-999</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>30</item>
    </string-array>
    <string name="prefs_title">Settings</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_editList">Edit Lists</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_filterList">Filter List</string>
    <string name="menu_item_sortList">Sort List</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_help">Help</string>
    <string name="about_label">About</string>
    <string name="about_version_label">Version:  </string>
    <string name="main_new_thought_btn">New Thought</string>
    <string name="main_refresh_btn">Refresh</string>
    <string name="main_refresh_label">No file has been selected</string>
	<string name="main_setup_title">Setup instructions</string>
    <string name="main_setup_body">
    Step 1: Link Action Everywhere to Dropbox (Menu button, Preferences)\nDropbox will create a new folder: \\Apps\\Action Everywhere.\n\n
    Step 2: In Thinking Rock save your file (.trx) permanently in this new folder (File > Save as: My Dropbox\\Apps\\Action Everywhere)\nRestart Thinking Rock.\n\n
   	Step 3: Select the file (in Preferences).\n\n
   	Step 4: Return to the home screen. (Back button, the file will now be downloaded)\n\n
   </string>
   <string name="help_title">Help</string>
   <string name="help_text">
    Setup instructions:\n
    Step 1: Link Action Everywhere to Dropbox (Menu button, Preferences)\nDropbox will create a new folder: \\Apps\\Action Everywhere.\n\n
    Step 2: In Thinking Rock save your file (.trx) permanently in this new folder (File > Save as: My Dropbox\\Apps\\Action Everywhere)\nRestart Thinking Rock.\n\n
   	Step 3: Select the file (in Preferences).\n\n
   	Step 4: Return to the home screen. (Back button, the file will now be downloaded)\n\n
   
   Besides the standard Thinking Rock lists, you can create your own customized lists. Select (Menu --> Edit Lists).
   After adding your list you should open it to apply your own filters (with the custom list opened select: Menu -> Filter).\n\n
   
   Limited support for Thinking Rock filters:\n
   Not all filters from Thinking Rock are supported in this app. This may lead to some inconsistencies.\n
   - Filters for Context, Status, Topic and Action Date are supported.\n 
   - Special filters like "Exclude if Null" are not supported.\n
   After applying changes to filters and lists in Thinking Rock, restart Thinking Rock for the changes to be saved and synced.\n\n   
   
   Submitting new thoughts:\n
   You can configure Thinking Rock with an email address to receive new thoughts (Tools -> Options
   Miscellaneous -> Email). Set this email in Preferences and you can send new thoughts from Action Everywhere.\n\n
   
   Sorting of lists:\n
   The order in which actions in a list are sorted is pre-determined and can not be changed. The order is:\n
   - Before today\n
   - Today\n
   - Every action without a date\n
   - Future actions\n\n
  
  Privacy statement:\n
	Action Everywhere uses Google Analytics to help analyze how users use the app. The information about your use (including IP address) is transmitted to Google. 
	This information is used to evaluate users\' use of the app.\n 
	We will not (and will not allow any third party to) use the statistical analytics tool to track or to collect any Personally Identifiable Information (PII) of visitors to our site. 
	We will not associate any data gathered from this site with any Personally Identifiable Information from any source, unless you explicitly 
	submit that information via a fill-in form on our website.\n\n
	You can disable usage analytics in the Preferences menu. \n\n
  
   </string>
    <string name="prefs_cat_files">Files &amp; Synchronization</string>
    <string name="prefs_sync_interval">Synchronize</string>
    <string name="prefs_sync_interval_summary">Select the synchronization interval</string>
    <string-array name="prefs_sync_intervals_keys">
        <item>Never</item>
        <item>Every 15 minutes</item>
        <item>Every half hour</item>
        <item>Every hour</item>
        <item>Every half day</item>
        <item>Every day</item>
    </string-array>
    <string-array name="prefs_sync_intervals_values">
        <item>NO_INTERVAL</item>
        <item>INTERVAL_FIFTEEN_MINUTES</item>
        <item>INTERVAL_HALF_HOUR</item>
        <item>INTERVAL_HOUR</item>
        <item>INTERVAL_HALF_DAY</item>
        <item>INTERVAL_DAY</item>
    </string-array>
    <string name="prefs_sync_with_dropbox">Dropbox</string>
    <string name="prefs_sync_with_dropbox_summary">Click here to use Dropbox to download your Thinking Rock file</string>
    <string name="prefs_dropbox_settings">Dropbox Settings</string>
    <string name="prefs_dropbox_settings_summary">Set up Dropbox syncing.</string>
    <string name="prefs_dropbox_login_loggedin">Unlink from Dropbox</string>
    <string name="prefs_dropbox_login_not_loggedin">Login to Dropbox</string>
    <string name="prefs_dropbox_login_summary_loggedin">Your devices is linked with Dropbox.</string>
    <string name="prefs_dropbox_login_summary_not_loggedin">Click here to login to Dropbox.</string>
    <string name="prefs_dropbox_remote_file">Select Dropbox File</string>
    <string name="prefs_dropbox_remote_file_summary">Click here to select your Thinking Rock file (this can take 30 secs, please wait).</string>
	<string name="prefs_cat_thoughts">Thoughts</string>
	<string name="prefs_cat_analytics">Analytics</string>
	<string name="prefs_analytics_checkbox_label">Disable Analytics</string>
	<string name="prefs_analytics_checkbox_summary">Google Analytics is used for usage analysis to improve Action Everywhere. Your privacy is respected, see Help for our privacy statement.</string>
    <string name="prefs_email">Email thoughts</string>
    <string name="prefs_email_summary">Email address to send thoughts to (configure Thinking Rock to retrieve these emails)</string>
    <string name="prefs_filters">Filters</string>
    <string name="prefs_filter_context_enable">Context</string>
    <string name="prefs_filter_context">Select contexts</string>
    <string name="prefs_filter_context_summary">None selected</string>
    <string name="prefs_filter_topic_enable">Topic</string>
    <string name="prefs_filter_topic">Select topics</string>
    <string name="prefs_filter_topic_summary">None selected</string>
    <string name="prefs_filter_status_enable">Status</string>
    <string name="prefs_filter_status">Select status</string>
    <string name="prefs_filter_status_summary">None selected</string>
    <string name="prefs_filter_date_before_enable">Action date is before</string>
    <string name="prefs_filter_date_before">Selection Action date before</string>
    <string name="prefs_filter_date_before_summary">Nothing selected</string>
    <string name="prefs_filter_date_after_enable">Action date is after</string>
    <string name="prefs_filter_date_after">Select action date after</string>
    <string name="prefs_filter_date_after_summary">Nothing selected</string>
    <string name="progress_dropboxexception">Refresh cancelled!\nCan not download file from Dropbox, do you have network connectivity?</string>
    <string name="progress_ioexception">Refresh cancelled!\nCan not read or write file from Dropbox on your device, do you have enough space available?</string>
    <string name="progress_exception">Refresh cancelled!\nAn error has occurred while trying to download a file from Dropbox </string>
    <string name="progress_exception_missing_file">Refresh cancelled!\nNo file selected to download from Dropbox (see Preferences)</string>
    <string name="voice_recognition_exception">Problem starting voice recognition.</string>
    <string name="dropbox_base_path">/App/Action Everywhere</string>
    <string name="dropbox_downloading">Downloading file from Dropbox</string>
    <string name="dropbox_Remote_Path_Label">Dropbox Remote File (eg. /actions/tr.trx)</string>
    <string name="dropbox_Local_Path_Label">Local File (eg. /mnt/sdcard/actions/tr.trx)</string>
    <string name="dropbox_Login_Label">Email</string>
    <string name="dropbox_Password_Label">Password</string>
    <string name="dropbox_LoggedIn_Label">Your device is linked with Dropbox.\n</string>
    <string name="dropbox_Login_Btn_Login">Log In to Dropbox</string>
    <string name="edit_lists_introduction">Available lists</string>
    <string name="edit_lists_add_list">Enter name of the new list</string>
	<string name="edit_lists_down_btn">Move down</string>
	<string name="edit_lists_up_btn">Move up</string>
    <string name="edit_lists_add_btn">Add</string>
    <string name="edit_lists_remove_btn">Remove</string>
</resources>