<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical" 
  android:tag="test">
  	<TextView
  		android:id="@+id/textViewEditListHeader"
  		android:text="@string/edit_lists_introduction"
  		android:textSize="18sp"
  		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</TextView>
	<ListView 
    	android:id="@+id/listEditLists" 
    	android:layout_width="fill_parent" 
    	android:layout_height="match_parent"
    	android:fadeScrollbars="false"
    	android:layout_weight="1">
	</ListView>
	<LinearLayout
		android:id="@+id/linearLayoutSortBtns" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <Button 
        	android:id="@+id/editListButtonUp" 
        	android:text="@string/edit_lists_up_btn" 
        	android:layout_height="match_parent" 
        	android:layout_width="match_parent"
        	android:drawableLeft="@android:drawable/arrow_up_float"
        	android:layout_weight="1"
        	android:onClick="orderUp">
        </Button>
        <Button 
        	android:id="@+id/editListButtonDown"
        	android:text="@string/edit_lists_down_btn" 
        	android:layout_height="match_parent" 
        	android:layout_width="match_parent" 
        	android:layout_weight="1"
        	android:drawableLeft="@android:drawable/arrow_down_float"
        	android:onClick="orderDown">
        </Button>
	</LinearLayout>
    <TextView
    	android:id="@+id/textViewEditListAdd"
		android:text="@string/edit_lists_add_list"
    	android:textSize="18sp"
  		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</TextView>
	<EditText 
		android:id="@+id/editListEditTextAdd" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	</EditText>
	
    <LinearLayout 
    	android:id="@+id/linearLayout1" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content">
        <Button 
        	android:id="@+id/editListButtonAdd" 
        	android:text="@string/edit_lists_add_btn" 
        	android:layout_height="wrap_content" 
        	android:layout_width="match_parent"
        	android:drawableLeft="@android:drawable/ic_menu_add"
        	android:layout_weight="1"
        	android:onClick="addList">
        </Button>
        <Button 
        	android:id="@+id/editListButtonRemove"
        	android:text="@string/edit_lists_remove_btn" 
        	android:layout_height="wrap_content" 
        	android:layout_width="match_parent" 
        	android:layout_weight="1"
        	android:drawableLeft="@android:drawable/ic_menu_delete"
        	android:onClick="removeList">
        </Button>
    </LinearLayout>
    	
</LinearLayout>
