<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
		android:id="@+id/labelLoggedIn"
		android:text="@string/dropbox_LoggedIn_Label"
		android:visibility="visible"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
	/>
    <TextView
		android:id="@+id/login_email_prompt"
		android:text="@string/dropbox_Login_Label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
      />
    <EditText
		android:id="@+id/login_email"
		android:text=""
		android:scrollHorizontally="true"
		android:inputType="textEmailAddress"
		android:maxLines="1"
		android:imeOptions="actionNext|flagNoExtractUi"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
      />
    <TextView
		android:id="@+id/login_password_prompt"
		android:text="@string/dropbox_Password_Label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
      />
    <EditText
		android:id="@+id/login_password"
		android:text=""
		android:scrollHorizontally="true"
		android:inputType="textPassword"
		android:maxLines="1"
		android:imeOptions="actionDone|flagNoExtractUi"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
      />
	<Button 
		android:id="@+id/login_submit" 
		android:text="@string/dropbox_Login_Btn_Login" 
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="dropboxLoginBtnPressed"
	  />
</LinearLayout>