<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/linearLayoutMainBtns" 
    	android:layout_width="fill_parent"
    	android:layout_height="60px"
    	android:layout_alignParentTop="true"
    	android:orientation="horizontal">
	    <ImageView
		    android:src="@drawable/ic_menu_refresh" 
		    android:text="@string/main_refresh_btn"
		    android:layout_alignParentLeft="true"
		    android:layout_marginRight="20px"
		    android:id="@+id/mainRefreshBtn"
		    android:layout_width="20dp" 
		    android:layout_height="20dp"
		    android:background="@null" />
	    <TextView
	    	android:id="@+id/textViewMainRefreshTime"
			android:text="@string/main_refresh_label"
	    	android:textSize="14sp"
	    	android:layout_centerVertical="true"
	    	android:layout_width="fill_parent"
			android:layout_height="match_parent">
		</TextView>
	</LinearLayout>
	<Button 
       	android:id="@+id/mainNewThoughtBtn" 
       	android:text="@string/main_new_thought_btn" 
       	android:layout_height="90px" 
       	android:layout_width="match_parent"
       	android:drawableLeft="@android:drawable/ic_menu_add"
       	android:layout_alignParentBottom="true"
       	android:onClick="newThought">
    </Button>
	<ListView 
    	android:id="@+id/listViewMain" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/linearLayoutMainBtns"
    	android:layout_above="@+id/mainNewThoughtBtn">
    </ListView>
    <TextView
    	android:id="@+id/textViewMainHelpTitle"
		android:text="@string/main_setup_title"
    	android:textSize="16sp"
    	android:layout_centerVertical="false"
    	android:padding="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/linearLayoutMainBtns"/>
    <TextView
    	android:id="@+id/textViewMainHelp"
		android:text="@string/main_setup_body"
    	android:textSize="14sp"
    	android:layout_centerVertical="false"
    	android:padding="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/textViewMainHelpTitle"
    	android:layout_above="@+id/mainNewThoughtBtn"/>
   
</RelativeLayout>
